Fix fromMap